--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "firebase-tools": "^8.11.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "firebase-functions": "^3.11.0",
+    "firebase-tools": "^8.12.0",
     "moment": "^2.29.0",
     "react": "^16.13.1",
     "react-currency-format": "^1.0.0",
